<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="register_terms_n_conditions">Acepta nuestros términos y condiciones</string>
    <string name="product_description_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed nisi purus. Cras bibendum neque diam, at rutrum augue dignissim vel. Sed rutrum ex non purus egestas facilisis. Aliquam erat volutpat. Duis vitae leo vel est ultricies sodales. Etiam ornare sapien feugiat magna iaculis euismod sed id tortor. Duis rhoncus pellentesque metus. Cras luctus semper leo ac venenatis. Curabitur tellus dui, euismod vel elit ut, consequat feugiat ligula. Sed efficitur id nisi ac cursus. Morbi ut lectus ut elit dignissim accumsan. Phasellus quam lorem, eleifend porta mattis et, gravida quis libero. Cras maximus porta tortor, ac posuere lorem pharetra vitae. Duis tincidunt vel mi non laoreet.</string>
    <string name="add_to_cart">Añadir al carrito</string>
    <string name="aplicar">Aplicar</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="wellcomeSplash">Bienvenido</string>
    <string name="login">Inicia sesión</string>
    <string name="question_login">¿No tienes cuenta?</string>
    <string name="registration_login">Registrate aquí</string>
    <string name="wellcome_singin">Bienvenido a Plant AI</string>
    <string name="register_email_singin">Correo electrónico</string>
    <string name="register_password_singin">Contraseña</string>
    <string name="register_hint_pass_singin">• • • • • • •</string>
    <string name="login_singin">Iniciar sesión</string>
    <string name="question1_singin">¿No tienes cuenta?</string>
    <string name="question2_singin">Registrate aqui</string>
    <string name="catalog_filter">Filtros</string>
    <string-array name="gender_items">
        <item>Selecciona tu Género (Opcional)</item>
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Prefiero no decir</item>
    </string-array>
    <string name="search_hint">Buscar</string>
    <string name="activity_main_recycler_menu_item_all">Todas</string>
    <string name="activity_main_recycler_menu_item_plants">Destacados</string>
    <string name="activity_main_recycler_menu_item_accesories">Accesorios</string>
    <string name="activity_main_recycler_menu_item_inputs">Insumos</string>
    <string name="activity_main_bottom_icon_truck">ENVIO GRATIS</string>
    <string name="activity_main_bottom_icon_stars">CLUB PLANTAI</string>
    <string name="activity_main_bottom_icon_grass">CONSEJOS Y TIPS</string>
    <string name="activity_main_bottom_button_truck">App Plant Ai</string>
    <string name="activity_main_bottom_button_stars">Beneficios</string>
    <string name="activity_main_bottom_button_grass">Consejos</string>
    <string name="sort_popular_products">Productos populares</string>
    <string name="sort_most_sold">Más vendidos</string>
    <string name="sort_price_high_to_low">Precio mayor a menor</string>
    <string name="sort_price_low_to_high">Precio menor a mayor</string>
    <string name="search_catalog_hint">Buscar plantas&#8230;</string>
    <string name="search_no_results">No se encontraron resultados para: %1$s</string>
    <string name="search_error">Error al realizar la búsqueda</string>
    <string name="no_search_results">No se encontraron plantas que coincidan con: "%1$s"</string>
    <string name="no_catalog_items" tools:ignore="Typos">No hay plantas disponibles en este momento</string>
    <string name="error_loading_plants">Hubo un error al cargar las plantas. Por favor, intente nuevamente</string>
    <string name="error_network">Error de conexión. Por favor, verifique su conexión a internet</string>
    <string name="error_server">Error en el servidor. Por favor, intente más tarde</string>
    <string name="activity_categories_main">Categorías</string>
    <string name="activity_categories_card_1">Plantas</string>
    <string name="activity_categories_card_2">Comunidad</string>
    <string name="activity_categories_card_3">Educación</string>
    <string name="activity_categories_card_4">Asistente virtual</string>
    <string name="activity_categories_card_5">Vende con nosotros</string>
    <string name="activity_categories_card_6">Sobre Nosotros</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plant_category_title">Placeholder Categoría</string>
    <string name="catalog_sort">Ordenar por</string>
    <string name="app_name">Plant AI</string>
    <string name="activity_categories_shopping">Mi carrito de compras</string>
    <string name="activity_categories_shopping_resume">Resumen de mi compra</string>
    <string name="activity_categories_shopping_pay">Ir a pagar</string>
    <string name="activity_categories_shopping_options">Productos que te podrian interesar</string>
    <string name="activity_categories_shopping_gratitude">Muchas Gracias Por Tu Compra. Hemos Enviado El Recibo De Tu Compra A Tu Correo Electrónico</string>
    <string name="activity_categories_shopping_gratitude_tittle">¡Compra Exitosa!</string>
    <string name="activity_categories_shopping_gratitude_tittle_1">Muchas Gracias Por Tu Compra. Hemos Enviado El Recibo De Tu Compra A Tu Correo Electrónico</string>
    <string name="activity_categories_shopping_gratitude_button">Seguir comprando</string>
    <string name="activity_categories_shopping_gratitude_discount">Código de descuento</string>
    <string name="activity_categories_shopping_gratitude_discount_pay_method">Elige como pagar</string>
    <string name="activity_categories_shopping_gratitude_discount_pay_button">Pagar</string>
    <string name="add_to_cart_text">Añadir al carrito</string>
    <string name="logo_plantai">Logo Plantai</string>
    <string name="camara">Camara</string>
    <string name="register_wellcome">¿Eres nuevo en Plant AI?</string>
    <string name="register_drop">Regístrate y disfruta de nuestros\nproductos y beneficios</string>
    <string name="register_data">Mis Datos</string>
    <string name="register_name">Nombre *</string>
    <string name="register_lastname">Apellido *</string>
    <string name="register_name1_hint">Juan</string>
    <string name="register_lastname1_hint">Perez</string>
    <string name="register_username">Nombre usuario *</string>
    <string name="register_usermail">Correo *</string>
    <string name="register_userpassword">Confirmar contraseña *</string>
    <string name="register_username_hint1">juan_perez</string>
    <string name="register_usermail_hint">juan.perez.123@gmail.com</string>
    <string name="register_userrut">RUT *</string>
    <string name="register_userphone">Teléfono</string>
    <string name="register_userrut_hint">11111111–1</string>
    <string name="register_userphone_hint">+56912345678</string>
    <string name="register_usergender">Género</string>
    <string name="register_userbirthday">Fecha de nacimiento *</string>
    <string name="register_userbirthday_hint">Fecha de nacimiento</string>
    <string name="register_next">Siguiente</string>
    <string name="register_next_shipping_info">Información de despacho</string>
    <string name="register_next_address">Dirección *</string>
    <string name="register_next_address_hint">Direción/Número/Piso</string>
    <string name="register_next_card_info">Registra una tarjeta (Opcional)</string>
    <string name="register_next_card_number">Número de tarjeta</string>
    <string name="register_next_card_number_hint">Número de tarjeta</string>
    <string name="register_next_card_mm" tools:ignore="TypographyEllipsis">Expiración (MM...</string>
    <string name="register_next_card_mm_hint" tools:ignore="TypographyEllipsis">Expiración (MM...</string>
    <string name="register_next_card_cvc">CVC</string>
    <string name="register_next_card_cvc_hint">CVC</string>
    <string name="profile_greetings">¡Hola!</string>
    <string name="profile_username">Nombre de Usuario</string>
    <string name="profile_profile">Mi perfil</string>
    <string name="profile_acount">Mi cuenta</string>
    <string name="profile_myaddress">Mis direcciones</string>
    <string name="profile_mycupons">Mis cupones</string>
    <string name="profile_mynotifications">Mis notificaciones</string>
    <string name="profile_shopping_history">Historial de compra</string>
    <string name="profile_close_session">Cerrar sesión</string>
    <string name="profile_account">Mis datos personales</string>
    <string name="profile_aka">¿Cómo quieres que te digamos?</string>
    <string name="profile_mail">Correo electrónico</string>
    <string name="profile_birthday">¿Cuándo es tu cumpleaños?</string>
    <string name="profile_password_mod">Modificar contraseña *</string>
    <string name="profile_password_confirmation">Confirma tu contraseña *</string>
    <string name="profile_button_save">Guardar</string>
    <string name="profile_map_text1">Aún no tienes direcciones guardadas</string>
    <string name="profile_map_text2">Agrega tus direcciones para realizar una compra mas rápida</string>
    <string name="profile_map_button">Agregar dirección</string>
    <string name="profile_user_addres">Agregar nueva dirección</string>
    <string name="profile_user_street">Calle</string>
    <string name="profile_user_number">Número</string>
    <string name="profile_user_housenumber">Número de casa o departamento</string>
    <string name="profile_user_favorite_address">Elegir esta dirección como favorita</string>
    <string name="profile_user_favorites_address_tittle">Mis Direcciones</string>
    <string name="profile_user_favorites_address_direction">Dirección:</string>
    <string name="DialogFragment_tittle_1">Cerrar sesión</string>
    <string name="DialogFragment_tittle_2">¿Seguro que quieres cerrar sesión?</string>
    <string name="DialogFragment_button_2">Volver</string>
    <string name="cd_attention_image">Simbolo de atención</string>
    <string name="cd_grass_icon">Icono representativo de pasto</string>
    <string name="cd_decreasequantity">Botón para disminuir la cantidad de producto</string>
    <string name="cd_increasequantity">Botón para aumentar la cantidad de producto</string>
    <string name="product_detail_price_placeholder">Ahora $10.000</string>
    <string name="product_detail_discountpercentage_placeholder">50%</string>
    <string name="product_detail_originalprice_placeholder">Normal $20.000</string>
    <string name="cd_product_detail_image">Imagen del producto</string>
    <string name="product_detail_productname_placeholder">Plantita</string>
    <string name="product_detail_quantity_placeholder">1</string>
    <string name="cd_user_map">Imagen de un mapa</string>
    <string name="cd_trash">Ícono para eliminar un producto</string>
    <string name="cd_sun">Ícono de un sol</string>
    <string name="cd_waterdroplet">Ícono de una gota de agua</string>
    <string name="cd_water">Ícono que representa agua</string>
    <string name="cd_warning">Símbolo de peligro</string>
    <string name="cd_cloud">Ícono de una nube</string>
    <string name="technical_details_light_label">"Luz: "</string>
    <string name="technical_details_irrigation_label">"Riego: "</string>
    <string name="technical_details_environment_label">"Entorno: "</string>
    <string name="technical_details_petfriendly_label">"Pet Friendly: "</string>
    <string name="technical_details_species_label">"Especie: "</string>
    <string name="technical_details_cycle_label">"Ciclo: "</string>
    <string name="technical_details_growth_label">"Crecimiento: "</string>
    <string name="technical_details_resistance_label">"Resistencia: "</string>
    <string name="technical_details_description_label">Descripción</string>
    <string name="technical_details_carachteristics_label">Características</string>
    <string name="technical_details_title_label">Detalle técnico</string>
</resources>