<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="36dp"
    android:layout_marginEnd="36dp"
    android:layout_marginTop="24dp">

    <!-- Description Section -->
    <TextView
        android:id="@+id/technical_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/technical_details_description_label"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/technical_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/quicksand"
        android:lineSpacingExtra="4dp"
        android:text="@string/product_description_example"
        android:textColor="@color/main_app"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="VisualLintLongText" />

    <TextView
        android:id="@+id/technical_description_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/technical_details_title_label"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <!-- Light Requirements -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_sun"
            android:src="@drawable/sun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/technical_details_light_label"
            android:textColor="@color/user_register_font"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lightRequirementText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/user_register_font" />
    </LinearLayout>

    <!-- Watering -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_waterdroplet"
            android:src="@drawable/opacity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/technical_details_irrigation_label"
            android:textColor="@color/user_register_font"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wateringText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/user_register_font" />
    </LinearLayout>

    <!-- Environment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_water"
            android:src="@drawable/waves" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/technical_details_environment_label"
            android:textColor="@color/user_register_font"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/environmentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/user_register_font" />
    </LinearLayout>

    <!-- Pet Friendly -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_attention_image"
            android:src="@drawable/error_outline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/technical_details_petfriendly_label"
            android:textColor="@color/user_register_font"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/petFriendlyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/user_register_font" />
    </LinearLayout>

    <!-- Characteristics Section -->
    <TextView
        android:id="@+id/technical_description_carachteristics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/technical_details_carachteristics_label"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <!-- Species -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_warning"
            android:src="@drawable/warning" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/technical_details_species_label"
            android:textColor="@color/user_register_font"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/speciesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/user_register_font" />
    </LinearLayout>

    <!-- Life Cycle -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_cloud"
            android:src="@drawable/cloud_outline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/technical_details_cycle_label"
            android:textColor="@color/user_register_font"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lifecycleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/user_register_font" />
    </LinearLayout>

    <!-- Growth -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_grass_icon"
            android:src="@drawable/grass" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/technical_details_growth_label"
            android:textColor="@color/user_register_font"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/growthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/user_register_font" />
    </LinearLayout>

    <!-- Resistance -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_cloud"
            app:srcCompat="@drawable/filter_drama" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/technical_details_resistance_label"
            android:textColor="@color/user_register_font"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resistanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/user_register_font" />
    </LinearLayout>

</LinearLayout>