<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="190dp"
    android:contentDescription="@string/cd_trash"
    android:padding="16dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/product_image_shopping_card"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/product_image_shopping"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_product_detail_image"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>


    <ImageButton
        android:id="@+id/delete_button_shopping"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@null"
        android:contentDescription="@string/cd_trash"
        android:src="@drawable/full_trash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_name_shopping"
        app:layout_constraintTop_toTopOf="@+id/product_name_shopping"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/product_name_shopping"
        android:layout_width="178dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/quicksand"
        android:foregroundGravity="center_vertical"
        android:gravity="center_vertical"
        android:text="@string/product_detail_productname_placeholder"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/delete_button_shopping"
        app:layout_constraintStart_toEndOf="@id/product_image_shopping_card"
        app:layout_constraintTop_toTopOf="@id/product_image_shopping_card"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/current_price_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/product_detail_price_placeholder"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@id/product_name_shopping"
        app:layout_constraintTop_toBottomOf="@id/product_name_shopping" />

    <TextView
        android:id="@+id/discount_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="86dp"
        android:background="@drawable/discount_background"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/product_detail_discountpercentage_placeholder"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/product_name_shopping"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/current_price_shopping"
        app:layout_constraintTop_toTopOf="@id/current_price_shopping" />

    <TextView
        android:id="@+id/normal_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/product_detail_originalprice_placeholder"
        android:textColor="@color/secondary_grey"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/product_name_shopping"
        app:layout_constraintTop_toBottomOf="@id/current_price_shopping" />

    <ImageButton
        android:id="@+id/btn_decrease_shopping"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/cd_decreasequantity"
        android:src="@drawable/circle_remove"
        app:layout_constraintStart_toStartOf="@id/product_name_shopping"
        app:layout_constraintTop_toBottomOf="@+id/normal_price"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/quantity_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/product_detail_quantity_placeholder"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btn_decrease_shopping"
        app:layout_constraintTop_toBottomOf="@+id/normal_price" />

    <ImageButton
        android:id="@+id/btn_increase_shopping"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/cd_increasequantity"
        android:src="@drawable/circle_add"
        app:layout_constraintStart_toEndOf="@id/quantity_shopping"
        app:layout_constraintTop_toBottomOf="@+id/normal_price"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
